# rust_server_l0

./: Cargo.toml  Create.sql  README.md  log4rs.yaml  model.json  test_request
src/: database.rs  main.rs  models.rs
