[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive", "string"] }
serde = {version="1.0.210", features = ["derive"]}
serde_json = "1.0.40" 
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
tokio-postgres-utils = "0.1"
axum = "0.6"

# log
log = "0.4"
log4rs = "1.2"
